# fathom

./: .gitignore  Cargo.toml
assets/: scene_with_square.mtl  simple_scene.mtl
assets/shaders/: default.wgsl  first_triangle.wgsl
examples/: app.rs  input.rs  main.rs  matrix_math.rs  square_with_indices.rs  two_triangles.rs
examples/3d/: camera_controller.rs  offset_square.rs
shaders/: default.wgsl  triangle_vertex_color.wgsl
src/: app.rs  input.rs  lib.rs  main.rs
src/assets/: materials.rs  mod.rs  shaders.rs
src/renderer/: camera.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  texture.rs  vertex.rs
